# Agents

agentic_scaffold/: .gitignore  README.md  pyproject.toml
agentic_scaffold/.github/workflows/: ci.yml
agentic_scaffold/adapters/auth/: github_adapter.py
agentic_scaffold/adapters/storage/: sqlite_adapter.py
agentic_scaffold/adapters/vcs/: github_adapter.py
agentic_scaffold/app/: main.py
agentic_scaffold/docs/: design_doc.md  requirements.md
agentic_scaffold/models/: tables.py
agentic_scaffold/orchestrator/: context.py  registry.py
agentic_scaffold/plugins/code_agent/: agent.py  manifest.yaml
agentic_scaffold/plugins/code_agent/tests/: test_code_agent.py
agentic_scaffold/plugins/req_agent/: agent.py  manifest.yaml
agentic_scaffold/plugins/req_agent/tests/: test_req_agent.py
agentic_scaffold/plugins/test_agent/: agent.py  manifest.yaml
agentic_scaffold/plugins/test_agent/tests/: test_test_agent.py
agentic_scaffold/tests/: test_smoke.py
